--- a/index.html
+++ b/index.html
@@ -5,11 +5,40 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <!-- Favicon -->
+    <link href="img/favicon.ico" rel="shortcut icon">
+
+    <!-- Google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
+    <!-- /Google fonts -->
     <title>Dropbox | Homepage</title>
 </head>
 <body>
-    <header></header>
-    <main></main>
+    <header>
+        <div class="container_L clearfix">
+            <nav class="top-nav-left">
+                <img src="img/logo-small.png" alt="">
+                <ul>
+                    <li><a href="#">Perché Dropbox?</a></li>
+                    <li><a href="#">Funzioni</a></li>
+                    <li><a href="#">Piani e Prezzi</a></li>
+                </ul>
+            </nav>
+            <nav class="top-nav-right">
+                <ul>
+                    <li><a href="#">Supporto</a></li>
+                    <li><a href="#">Contatta l'ufficio vendite</a></li>
+                    <li><a href="#">Accedi</a></li>
+                </ul>
+                <a href="#">Inizia</a>
+            </nav>
+        </div>
+    </header>
+    <main>
+        <div style="height: 120vh; background-color:blue"></div>
+    </main>
     <footer></footer>
 </body>
 </html>
