Iniziata Sezione Hero

--- a/index.html
+++ b/index.html
@@ -32,12 +32,18 @@
                     <li><a href="#">Contatta l'ufficio vendite</a></li>
                     <li><a href="#">Accedi</a></li>
                 </ul>
-                <a href="#">Inizia</a>
+                <a class="btn" href="#">Inizia</a>
             </nav>
         </div>
     </header>
     <main>
-        <div style="height: 120vh; background-color:blue"></div>
+        <section class="hero">
+            <div class="container_M clearfix">
+                <h1>Tutto ciò che ti serve per il lavoro, In un unico posto</h1>
+                <div class="hero-text"></div>
+                <img src="img/jumbo.png" alt="">
+            </div>
+        </section>
     </main>
     <footer></footer>
 </body>
