--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
     <!-- Google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
-    <!-- /Google fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+
+    <!-- font awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <title>Dropbox | Homepage</title>
 </head>
 <body>
@@ -40,7 +43,14 @@
         <section class="hero">
             <div class="container_M clearfix">
                 <h1>Tutto ciò che ti serve per il lavoro, In un unico posto</h1>
-                <div class="hero-text"></div>
+                <div class="hero-text">
+                    <p>Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. <br> Dropbox Business è più di uno spazio di archiviazione sicuro: è un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente</p>
+ 
+                    <a class="btn" href="#">Inizia la tua prova gratuita</a>
+                    <a class="nobtn" href="#">annulla in qualsiasi momento</a>
+
+                    <i class="fas fa-arrow-down"></i>
+                </div>
                 <img src="img/jumbo.png" alt="">
             </div>
         </section>
