Aggiunta struttura "trova il tuo piano"

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         </div>
     </header>
     <main>
+        <!-- Hero Section -->
         <section class="hero">
             <div class="container_M clearfix">
                 <h1>Tutto ciò che ti serve per il lavoro, In un unico posto</h1>
@@ -54,6 +55,29 @@
                 <img src="img/jumbo.png" alt="">
             </div>
         </section>
+
+        <!-- Find your plan Section -->
+        <Section id="FindPlanSec">
+            <div class="container_S">
+
+                <h2>Trova il piano Dropbox che fa per te</h2>
+
+                <div class="plan-radio">
+                    <input type="radio" name="fmensile" id="">
+                    <label for="fmensile">Fatturazione mensile</label>
+
+                    <input type="radio" name="fannuale" id="">
+                    <label for="fannuale">Fatturazione annuale</label>
+                </div>
+
+                <div class="choose-plan clearfix">
+                    <div class="plan-type">01</div>
+                    <div class="plan-type" id="ptcenter">02</div>
+                    <div class="plan-type">03</div>
+                    <div class="plan-type-large">large</div>
+                </div>
+            </div>
+        </Section>
     </main>
     <footer></footer>
 </body>
