Avanzamenti struttura "trova il tuo piano"

--- a/index.html
+++ b/index.html
@@ -71,10 +71,30 @@
                 </div>
 
                 <div class="choose-plan clearfix">
-                    <div class="plan-type">01</div>
-                    <div class="plan-type" id="ptcenter">02</div>
-                    <div class="plan-type">03</div>
-                    <div class="plan-type-large">large</div>
+                    <div class="plan-type">
+                        <div class="headbox">
+                            <i class="far fa-user"></i>
+                            <h5>Singolo</h5>
+                        </div>
+                    </div>
+                    <div class="plan-type" id="ptcenter">
+                        <div class="headbox">
+                            <i class="far fa-building"></i>
+                            <h5>Team</h5>
+                        </div>
+                    </div>
+                    <div class="plan-type">
+                        <div class="headbox">
+                            <i class="far fa-building"></i>
+                            <h5>Team</h5>
+                        </div>
+                    </div>
+                    <div class="plan-type-large">
+                        <div class="headbox">
+                            <i class="far fa-building"></i>
+                            <h5>Team</h5>
+                        </div>
+                    </div>
                 </div>
             </div>
         </Section>
