Aggiunto Style "trova il tuo piano"

--- a/index.html
+++ b/index.html
@@ -71,30 +71,98 @@
                 </div>
 
                 <div class="choose-plan clearfix">
+                    <!-- Professional Plan -->
                     <div class="plan-type">
                         <div class="headbox">
                             <i class="far fa-user"></i>
                             <h5>Singolo</h5>
                         </div>
+                        <div class="bodybox">
+                            <h3>Professional</h3>
+                            <h6>19,99€</h6>
+                            <p>/mese</p>
+
+                            <p><i class="far fa-user"></i> utente</p>
+                            <p><i class="far fa-folder"></i> 3 TB di spazio di archiviazione sicuro</p>
+                            <p><i class="fas fa-pencil-alt"></i> Funzioni di produttività premium e condivisione file semplice e sicura</p>
+
+                            <a class="btn" href="">Prova gratis per 30 giorni</a>
+                            <p class="link-under-btn">oppure <a href="">acquista ora</a></p>
+
+                            <h4>Punti salienti del piano</h4>
+                            <ul>
+                                <li><i class="fas fa-check"></i> Invia file fino a 100 GB con Dropbox Transfer</li>
+                                <li><i class="fas fa-check"></i> Cartelle offline su dispositivi mobili</li>
+                                <li><i class="fas fa-check"></i> Pulizia remota dell'account</li>
+                                <li><i class="fas fa-check"></i> Filigrana documento</li>
+                                <li><i class="fas fa-check"></i> Assistenza prioritaria via email e chat</li>
+                            </ul>
+                        </div>
                     </div>
+                    <!-- Standard Plan -->
                     <div class="plan-type" id="ptcenter">
                         <div class="headbox">
                             <i class="far fa-building"></i>
                             <h5>Team</h5>
                         </div>
+                        <div class="bodybox">
+                            <h3>Standard</h3>
+                            <h6>19,99€</h6>
+                            <p>/mese</p>
+
+                            <p><i class="far fa-user"></i> utente</p>
+                            <p><i class="far fa-folder"></i> 3 TB di spazio di archiviazione sicuro</p>
+                            <p><i class="fas fa-pencil-alt"></i> Funzioni di produttività premium e condivisione file semplice e sicura</p>
+
+                            <a class="btn" href="">Prova gratis per 30 giorni</a>
+                            <p class="link-under-btn">oppure <a href="">acquista ora</a></p>
+
+                            <h4>Punti salienti del piano</h4>
+                            <ul>
+                                <li><i class="fas fa-check"></i> Invia file fino a 100 GB con Dropbox Transfer</li>
+                                <li><i class="fas fa-check"></i> Cartelle offline su dispositivi mobili</li>
+                                <li><i class="fas fa-check"></i> Pulizia remota dell'account</li>
+                                <li><i class="fas fa-check"></i> Filigrana documento</li>
+                                <li><i class="fas fa-check"></i> Assistenza prioritaria via email e chat</li>
+                            </ul>
+                        </div>
                     </div>
+                    <!-- Advanced Plan -->
                     <div class="plan-type">
                         <div class="headbox">
                             <i class="far fa-building"></i>
                             <h5>Team</h5>
                         </div>
+                        <div class="bodybox">
+                            <h3>Professional</h3>
+                            <h6>19,99€</h6>
+                            <p>/mese</p>
+
+                            <p><i class="far fa-user"></i> utente</p>
+                            <p><i class="far fa-folder"></i> 3 TB di spazio di archiviazione sicuro</p>
+                            <p><i class="fas fa-pencil-alt"></i> Funzioni di produttività premium e condivisione file semplice e sicura</p>
+
+                            <a class="btn" href="">Prova gratis per 30 giorni</a>
+                            <p class="link-under-btn">oppure <a href="">acquista ora</a></p>
+
+                            <h4>Punti salienti del piano</h4>
+                            <ul>
+                                <li><i class="fas fa-check"></i> Invia file fino a 100 GB con Dropbox Transfer</li>
+                                <li><i class="fas fa-check"></i> Cartelle offline su dispositivi mobili</li>
+                                <li><i class="fas fa-check"></i> Pulizia remota dell'account</li>
+                                <li><i class="fas fa-check"></i> Filigrana documento</li>
+                                <li><i class="fas fa-check"></i> Assistenza prioritaria via email e chat</li>
+                            </ul>
+                        </div>
                     </div>
+
                     <div class="plan-type-large">
                         <div class="headbox">
                             <i class="far fa-building"></i>
                             <h5>Team</h5>
                         </div>
                     </div>
+
                 </div>
             </div>
         </Section>
