Completato "trova il tuo piano"

--- a/index.html
+++ b/index.html
@@ -82,25 +82,27 @@
                             <h6>19,99€</h6>
                             <p>/mese</p>
 
-                            <p><i class="far fa-user"></i> utente</p>
-                            <p><i class="far fa-folder"></i> 3 TB di spazio di archiviazione sicuro</p>
-                            <p><i class="fas fa-pencil-alt"></i> Funzioni di produttività premium e condivisione file semplice e sicura</p>
+                            <div class="pt-fea">
+                                <p><i class="far fa-user"></i> utente</p>
+                                <p><i class="far fa-folder"></i> 3 TB di spazio di archiviazione sicuro</p>
+                                <p><i class="fas fa-pencil-alt"></i> Funzioni di produttività premium e condivisione file semplice e sicura</p>
+                            </div>
 
                             <a class="btn" href="">Prova gratis per 30 giorni</a>
                             <p class="link-under-btn">oppure <a href="">acquista ora</a></p>
 
                             <h4>Punti salienti del piano</h4>
                             <ul>
-                                <li><i class="fas fa-check"></i> Invia file fino a 100 GB con Dropbox Transfer</li>
-                                <li><i class="fas fa-check"></i> Cartelle offline su dispositivi mobili</li>
-                                <li><i class="fas fa-check"></i> Pulizia remota dell'account</li>
-                                <li><i class="fas fa-check"></i> Filigrana documento</li>
-                                <li><i class="fas fa-check"></i> Assistenza prioritaria via email e chat</li>
+                                <li>Invia file fino a 100 GB con Dropbox Transfer</li>
+                                <li>Cartelle offline su dispositivi mobili</li>
+                                <li>Pulizia remota dell'account</li>
+                                <li>Filigrana documento</li>
+                                <li>Assistenza prioritaria via email e chat</li>
                             </ul>
                         </div>
                     </div>
                     <!-- Standard Plan -->
-                    <div class="plan-type" id="ptcenter">
+                    <div class="plan-type c-margin">
                         <div class="headbox">
                             <i class="far fa-building"></i>
                             <h5>Team</h5>
@@ -110,20 +112,22 @@
                             <h6>19,99€</h6>
                             <p>/mese</p>
 
-                            <p><i class="far fa-user"></i> utente</p>
-                            <p><i class="far fa-folder"></i> 3 TB di spazio di archiviazione sicuro</p>
-                            <p><i class="fas fa-pencil-alt"></i> Funzioni di produttività premium e condivisione file semplice e sicura</p>
+                            <div class="pt-fea">
+                                <p><i class="far fa-user"></i> utente</p>
+                                <p><i class="far fa-folder"></i> 3 TB di spazio di archiviazione sicuro</p>
+                                <p><i class="fas fa-pencil-alt"></i> Funzioni di produttività premium e condivisione file semplice e sicura</p>
+                            </div>
 
                             <a class="btn" href="">Prova gratis per 30 giorni</a>
                             <p class="link-under-btn">oppure <a href="">acquista ora</a></p>
 
                             <h4>Punti salienti del piano</h4>
                             <ul>
-                                <li><i class="fas fa-check"></i> Invia file fino a 100 GB con Dropbox Transfer</li>
-                                <li><i class="fas fa-check"></i> Cartelle offline su dispositivi mobili</li>
-                                <li><i class="fas fa-check"></i> Pulizia remota dell'account</li>
-                                <li><i class="fas fa-check"></i> Filigrana documento</li>
-                                <li><i class="fas fa-check"></i> Assistenza prioritaria via email e chat</li>
+                                <li>Invia file fino a 100 GB con Dropbox Transfer</li>
+                                <li>Cartelle offline su dispositivi mobili</li>
+                                <li>Pulizia remota dell'account</li>
+                                <li>Filigrana documento</li>
+                                <li>Assistenza prioritaria via email e chat</li>
                             </ul>
                         </div>
                     </div>
@@ -138,20 +142,22 @@
                             <h6>19,99€</h6>
                             <p>/mese</p>
 
-                            <p><i class="far fa-user"></i> utente</p>
-                            <p><i class="far fa-folder"></i> 3 TB di spazio di archiviazione sicuro</p>
-                            <p><i class="fas fa-pencil-alt"></i> Funzioni di produttività premium e condivisione file semplice e sicura</p>
+                            <div class="pt-fea">
+                                <p><i class="far fa-user"></i> utente</p>
+                                <p><i class="far fa-folder"></i> 3 TB di spazio di archiviazione sicuro</p>
+                                <p><i class="fas fa-pencil-alt"></i> Funzioni di produttività premium e condivisione file semplice e sicura</p>
+                            </div>
 
                             <a class="btn" href="">Prova gratis per 30 giorni</a>
                             <p class="link-under-btn">oppure <a href="">acquista ora</a></p>
 
                             <h4>Punti salienti del piano</h4>
                             <ul>
-                                <li><i class="fas fa-check"></i> Invia file fino a 100 GB con Dropbox Transfer</li>
-                                <li><i class="fas fa-check"></i> Cartelle offline su dispositivi mobili</li>
-                                <li><i class="fas fa-check"></i> Pulizia remota dell'account</li>
-                                <li><i class="fas fa-check"></i> Filigrana documento</li>
-                                <li><i class="fas fa-check"></i> Assistenza prioritaria via email e chat</li>
+                                <li><p>Invia file fino a 100 GB con Dropbox Transfer</p></li>
+                                <li>Cartelle offline su dispositivi mobili</li>
+                                <li>Pulizia remota dell'account</li>
+                                <li>Filigrana documento</li>
+                                <li>Assistenza prioritaria via email e chat</li>
                             </ul>
                         </div>
                     </div>
@@ -160,6 +166,12 @@
                         <div class="headbox">
                             <i class="far fa-building"></i>
                             <h5>Team</h5>
+                        </div>
+                        <div class="bodybox">
+                            <h3>Enterprise</h3>
+                            <h4>Contatta l'ufficio vendite per i prezzi</h4>
+                            <p>Soluzioni personalizzate e supporto su misura per aiutare professionisti IT su qualsiasi scala</p>
+                            <a href="#" class="btn">Contatta l'ufficio vendite</a>
                         </div>
                     </div>
 
