Aggiunta sezione partner

--- a/index.html
+++ b/index.html
@@ -178,6 +178,18 @@
                 </div>
             </div>
         </Section>
+
+        <!-- Partner Section -->
+        <section id="partner">
+            <div class="container_S clearfix">
+                <img src="img/partner.png" alt="">
+                <div>
+                    <h3>Entra in contatto con un partner Dropbox</h3>
+                    <p>Trova unpartner Dropbox e HelloSign di fiducia. Ottieni le soluzioni e i servizi necessari per raggiungere i tuoi obiettivi aziendali, tra cui implementazione, integrazione, gestione e supporto continui.</p>
+                    <a href="#" class="btn btn-empty">Trova  un partner</a>
+                </div>
+            </div>
+        </section>
     </main>
     <footer></footer>
 </body>
