Aggiunta sezione "Team Show"

--- a/index.html
+++ b/index.html
@@ -234,7 +234,40 @@
             </div>
         </section>
 
+        <!-- Team Show -->
+        <section id="team-show" class="clearfix">
+            <div class="tms-sq-b clearfix">
+                <div id="tms-DESIGNit">
+                    <img src="img/designit.svg" alt="">
+                </div>
+                <div id="tms-ASU">
+                    <img src="img/arizona_state_university.svg" alt="">
+                </div>
+                <div id="tms-UF">
+                    <img src="img/university_of_florida.svg" alt="">
+                </div>
+                <div id="tms-TOPPS">
+                    <img src="img/topps.svg" alt="">
+                </div>
+            </div>
 
+            <div class="tms-sq-c"></div>
+
+            <div class="tms-sq-b clearfix">
+                <div id="tms-WBR">
+                    <img src="img/world_bicycle_relief.svg" alt="">
+                </div>
+                <div id="tms-HEARST">
+                    <img src="img/hearst_corp.svg" alt="">
+                </div>
+                <div id="tms-LonelyPlanet">
+                    <img src="img/lonely_planet.svg" alt="">
+                </div>
+                <div id="tms-ClearChannel">
+                    <img src="img/clear_channel.svg" alt="">
+                </div>
+            </div>
+        </section>
 
     </main>
     <footer></footer>
