Completata Sezione "Team Show"

--- a/index.html
+++ b/index.html
@@ -236,9 +236,15 @@
 
         <!-- Team Show -->
         <section id="team-show" class="clearfix">
+
+            <div class="container_S">
+                <h2>Più di 500.000 team <br> utilizzano Dropbox Business</h2>
+                <p class="link-under-btn"><a href="">Scopri di più sui nostri clienti</a></p>
+            </div>
+
             <div class="tms-sq-b clearfix">
                 <div id="tms-DESIGNit">
-                    <img src="img/designit.svg" alt="">
+                    <img src="img/designit-white.svg" alt="">
                 </div>
                 <div id="tms-ASU">
                     <img src="img/arizona_state_university.svg" alt="">
@@ -251,7 +257,13 @@
                 </div>
             </div>
 
-            <div class="tms-sq-c"></div>
+            <div class="tms-sq-c">
+                <div>
+                    <img src="img/designit.svg" alt="">
+                </div>
+                <p>"I membri del nostro team lavorano costantemente in Paesi, fusi orari e uffici diversi. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox e Dropbox Paper. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox Paper".</p>
+                <span>Morten Thomsen, Global IT Lead</span>
+            </div>
 
             <div class="tms-sq-b clearfix">
                 <div id="tms-WBR">
