Aggiunta Sezione "Prova Dropbox Business"

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                             </ul>
                         </div>
                     </div>
-
+                    <!-- Enterprise Plan -->
                     <div class="plan-type-large">
                         <div class="headbox">
                             <i class="far fa-building"></i>
@@ -171,7 +171,7 @@
                             <h3>Enterprise</h3>
                             <h4>Contatta l'ufficio vendite per i prezzi</h4>
                             <p>Soluzioni personalizzate e supporto su misura per aiutare professionisti IT su qualsiasi scala</p>
-                            <a href="#" class="btn">Contatta l'ufficio vendite</a>
+                            <a href="#" class="btn btn-pad50">Contatta l'ufficio vendite</a>
                         </div>
                     </div>
 
@@ -280,7 +280,18 @@
                 </div>
             </div>
         </section>
+        <section id="db-ftry">
+            <div class="container_S clearfix">
+                <div>
+                    <h2>Porta Dropbox Business nella tua azienda.</h2>
+                </div>
+                <div>
+                    <a href="#" class="btn btn-white btn-pad50">Inizia la tua prova gratuita</a>
+                </div>
+            </div>
+        </section>
 
+        
     </main>
     <footer></footer>
 </body>
