--- a/index.html
+++ b/index.html
@@ -280,6 +280,7 @@
                 </div>
             </div>
         </section>
+        <!-- Prova Dropbox Business -->
         <section id="db-ftry">
             <div class="container_S clearfix">
                 <div>
@@ -291,7 +292,31 @@
             </div>
         </section>
 
-        
+        <section id="questions">
+            <div class="container_S">
+                <h2>Domande Frequenti</h2>
+
+                <div>
+                    <h4>Qual'è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</h4>
+                    <i class="fas fa-angle-down"></i>
+                </div>
+
+                <div>
+                    <h4>Qual'è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</h4>
+                    <i class="fas fa-angle-down"></i>
+                </div>
+
+                <div>
+                    <h4>Qual'è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</h4>
+                    <i class="fas fa-angle-down"></i>
+                </div>
+
+                <div>
+                    <h4>Qual'è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</h4>
+                    <i class="fas fa-angle-down"></i>
+                </div>
+            </div>
+        </section>
     </main>
     <footer></footer>
 </body>
