--- a/index.html
+++ b/index.html
@@ -318,6 +318,10 @@
             </div>
         </section>
     </main>
-    <footer></footer>
+    <footer>
+        <div class="container_M">
+            
+        </div>
+    </footer>
 </body>
 </html>
