Fix plan-type li

--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
                 <h2>Trova il piano Dropbox che fa per te</h2>
 
                 <div class="plan-radio">
-                    <input type="radio" name="fmensile" id="">
+                    <input type="radio" name="fpiano" id="fmensile">
                     <label for="fmensile">Fatturazione mensile</label>
 
-                    <input type="radio" name="fannuale" id="">
+                    <input type="radio" name="fpiano" id="fannuale">
                     <label for="fannuale">Fatturazione annuale</label>
                 </div>
 
@@ -93,11 +93,11 @@
 
                             <h4>Punti salienti del piano</h4>
                             <ul>
-                                <li>Invia file fino a 100 GB con Dropbox Transfer</li>
-                                <li>Cartelle offline su dispositivi mobili</li>
-                                <li>Pulizia remota dell'account</li>
-                                <li>Filigrana documento</li>
-                                <li>Assistenza prioritaria via email e chat</li>
+                                <li><span>Invia file fino a 100 GB con Dropbox Transfer</span></li>
+                                <li><span>Cartelle offline su dispositivi mobili</span></li>
+                                <li><span>Pulizia remota dell'account</span></li>
+                                <li><span>Filigrana documento</span></li>
+                                <li><span>Assistenza prioritaria via email e chat</span></li>
                             </ul>
                         </div>
                     </div>
@@ -123,11 +123,11 @@
 
                             <h4>Punti salienti del piano</h4>
                             <ul>
-                                <li>Invia file fino a 100 GB con Dropbox Transfer</li>
-                                <li>Cartelle offline su dispositivi mobili</li>
-                                <li>Pulizia remota dell'account</li>
-                                <li>Filigrana documento</li>
-                                <li>Assistenza prioritaria via email e chat</li>
+                                <li><span>Invia file fino a 100 GB con Dropbox Transfer</span></li>
+                                <li><span>Cartelle offline su dispositivi mobili</span></li>
+                                <li><span>Pulizia remota dell'account</span></li>
+                                <li><span>Filigrana documento</span></li>
+                                <li><span>Assistenza prioritaria via email e chat</span></li>
                             </ul>
                         </div>
                     </div>
@@ -138,7 +138,7 @@
                             <h5>Team</h5>
                         </div>
                         <div class="bodybox">
-                            <h3>Professional</h3>
+                            <h3>Advanced</h3>
                             <h6>19,99€</h6>
                             <p>/mese</p>
 
@@ -153,11 +153,11 @@
 
                             <h4>Punti salienti del piano</h4>
                             <ul>
-                                <li><p>Invia file fino a 100 GB con Dropbox Transfer</p></li>
-                                <li>Cartelle offline su dispositivi mobili</li>
-                                <li>Pulizia remota dell'account</li>
-                                <li>Filigrana documento</li>
-                                <li>Assistenza prioritaria via email e chat</li>
+                                <li><span>Invia file fino a 100 GB con Dropbox Transfer</span></li>
+                                <li><span>Cartelle offline su dispositivi mobili</span></li>
+                                <li><span>Pulizia remota dell'account</span></li>
+                                <li><span>Filigrana documento</span></li>
+                                <li><span>Assistenza prioritaria via email e chat</span></li>
                             </ul>
                         </div>
                     </div>
@@ -320,7 +320,7 @@
     </main>
     <footer>
         <div class="container_M">
-            
+
         </div>
     </footer>
 </body>
