aggiunta navigazione e interazione con domande

--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
     <header>
         <div class="container_L clearfix">
             <nav class="top-nav-left">
-                <img src="img/logo-small.png" alt="">
+                <a href="#"><img src="img/logo-small.png" alt=""></a>
                 <ul>
                     <li><a href="#">Perché Dropbox?</a></li>
-                    <li><a href="#">Funzioni</a></li>
-                    <li><a href="#">Piani e Prezzi</a></li>
+                    <li><a href="#bs-feature">Funzioni</a></li>
+                    <li><a href="#FindPlanSec">Piani e Prezzi</a></li>
                 </ul>
             </nav>
             <nav class="top-nav-right">
@@ -299,21 +299,25 @@
                 <div>
                     <h4>Qual'è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</h4>
                     <i class="fas fa-angle-down"></i>
+                    <p class="answer">Il piano Standard fornisce ai team 5 TB di spazio di archiviazione e semplici strumenti di condivisione e collaborazione. Per i team che hanno bisogno di più spazio di archiviazione e sicurezza, il piano Advanced offre tutto lo spazio necessario al team, oltre a sofisticate funzioni di amministrazione, controllo, integrazione e sicurezza. Per ulteriori informazioni sui nostri piani.</p>
                 </div>
 
                 <div>
-                    <h4>Qual'è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</h4>
+                    <h4>Quanto spazio riceve il mio team?</h4>
                     <i class="fas fa-angle-down"></i>
+                    <p class="answer">Dropbox Business offre tre piani per soddisfare le esigenze del tuo team. Il piano Standard offre al tuo team 5 TB di spazio di archiviazione condiviso. Per i team che hanno bisogno di più spazio, i piani Advanced e Enterprise offrono tutto lo spazio necessario.</p>
                 </div>
 
                 <div>
-                    <h4>Qual'è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</h4>
+                    <h4>Vorrei iniziare una prova. Di che cosa ho bisogno per iniziare?</h4>
                     <i class="fas fa-angle-down"></i>
+                    <p class="answer">Non sono necessarie conoscenze già acquisite. Tuttavia per assicurarti di sfruttare tutte le funzionalità offerte da Dropbox Business, suggeriamo di consultare le guide per amministratori e utenti.</p>
                 </div>
 
                 <div>
-                    <h4>Qual'è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</h4>
+                    <h4>Posso avere meno di 3 utenti nel mio account?</h4>
                     <i class="fas fa-angle-down"></i>
+                    <p class="answer">Sì. Il pacchetto base di Dropbox Business include 3 utenti, ma non devi obbligatoriamente utilizzare subito tutte le licenze. Visto che queste ultime possono essere riutilizzate, molti dei nostri utenti riservano qualche licenza extra per fornitori o clienti.</p>
                 </div>
             </div>
         </section>
