--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <nav class="top-nav-left">
                 <a href="#"><img src="img/logo-small.png" alt=""></a>
                 <ul>
-                    <li><a href="#">Perché Dropbox?</a></li>
+                    <li><a href="">Perché Dropbox?</a></li>
                     <li><a href="#bs-feature">Funzioni</a></li>
                     <li><a href="#FindPlanSec">Piani e Prezzi</a></li>
                 </ul>
@@ -35,7 +35,7 @@
                     <li><a href="#">Contatta l'ufficio vendite</a></li>
                     <li><a href="#">Accedi</a></li>
                 </ul>
-                <a class="btn" href="#">Inizia</a>
+                <a class="btn" href="">Inizia</a>
             </nav>
         </div>
     </header>
@@ -47,8 +47,8 @@
                 <div class="hero-text">
                     <p>Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. <br> Dropbox Business è più di uno spazio di archiviazione sicuro: è un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente</p>
  
-                    <a class="btn" href="#">Inizia la tua prova gratuita</a>
-                    <a class="nobtn" href="#">annulla in qualsiasi momento</a>
+                    <a class="btn" href="">Inizia la tua prova gratuita</a>
+                    <a class="nobtn" href="">annulla in qualsiasi momento</a>
 
                     <i class="fas fa-arrow-down"></i>
                 </div>
@@ -171,7 +171,7 @@
                             <h3>Enterprise</h3>
                             <h4>Contatta l'ufficio vendite per i prezzi</h4>
                             <p>Soluzioni personalizzate e supporto su misura per aiutare professionisti IT su qualsiasi scala</p>
-                            <a href="#" class="btn btn-pad50">Contatta l'ufficio vendite</a>
+                            <a href="" class="btn btn-pad50">Contatta l'ufficio vendite</a>
                         </div>
                     </div>
 
@@ -186,7 +186,7 @@
                 <div>
                     <h3>Entra in contatto con un partner Dropbox</h3>
                     <p>Trova unpartner Dropbox e HelloSign di fiducia. Ottieni le soluzioni e i servizi necessari per raggiungere i tuoi obiettivi aziendali, tra cui implementazione, integrazione, gestione e supporto continui.</p>
-                    <a href="#" class="btn btn-empty">Trova  un partner</a>
+                    <a href="" class="btn btn-empty">Trova  un partner</a>
                 </div>
             </div>
         </section>
@@ -287,7 +287,7 @@
                     <h2>Porta Dropbox Business nella tua azienda.</h2>
                 </div>
                 <div>
-                    <a href="#" class="btn btn-white btn-pad50">Inizia la tua prova gratuita</a>
+                    <a href="" class="btn btn-white btn-pad50">Inizia la tua prova gratuita</a>
                 </div>
             </div>
         </section>
@@ -325,6 +325,68 @@
     <footer>
         <div class="container_M">
 
+            <ul class="clearfix">
+                <li>
+                    <h3>Dropbox</h3>
+                    <ul>
+                        <li><a href="">Applicazione desktop</a></li>
+                        <li><a href="">Perché Dropbox</a></li>
+                        <li><a href="">Piani</a></li>
+                        <li><a href="">Sicurezza</a></li>
+                        <li><a href="">Funzioni</a></li>
+                    </ul>
+                </li>
+
+                <li>
+                    <h3>Prodotti</h3>
+                    <ul>
+                        <li><a href="">Applicazione desktop</a></li>
+                        <li><a href="">Perché Dropbox</a></li>
+                        <li><a href="">Piani</a></li>
+                        <li><a href="">Sicurezza</a></li>
+                        <li><a href="">Funzioni</a></li>
+                    </ul>
+                </li>
+
+                <li>
+                    <h3>Azienda</h3>
+                    <ul>
+                        <li><a href="">Applicazione desktop</a></li>
+                        <li><a href="">Perché Dropbox</a></li>
+                        <li><a href="">Piani</a></li>
+                        <li><a href="">Sicurezza</a></li>
+                        <li><a href="">Funzioni</a></li>
+                    </ul>
+                </li>
+
+                <li>
+                    <h3>Supporto</h3>
+                    <ul>
+                        <li><a href="">Applicazione desktop</a></li>
+                        <li><a href="">Perché Dropbox</a></li>
+                        <li><a href="">Piani</a></li>
+                        <li><a href="">Sicurezza</a></li>
+                        <li><a href="">Funzioni</a></li>
+                    </ul>
+                </li>
+
+                <li>
+                    <h3>Community</h3>
+                    <ul>
+                        <li><a href="">Applicazione desktop</a></li>
+                        <li><a href="">Perché Dropbox</a></li>
+                        <li><a href="">Piani</a></li>
+                    </ul>
+                </li>
+            </ul>
+            
+            <a href="">
+                <div class="foot-lang">
+                    <i class="fas fa-globe-americas"></i>
+                    <p>Italiano</p>
+                    <i class="fas fa-caret-up"></i>
+                </div>
+            </a>
         </div>
     </footer>
 </body>
